--- a/27 Feb 2025/sample3.html
+++ b/27 Feb 2025/sample3.html
@@ -28,6 +28,7 @@
             display: flex;
             width:100%;
             margin-top:20px;
+            gap: 10px;
         }
         .left-content, .right-content{
             border: 1px solid black;
